# -

./: README.md  preload_model.bat  pyproject.toml  start_api.bat  start_gradio.bat
data/: sample_lyrics.jsonl
music_lyrics_ai/: __init__.py  api.py  api_keys.py  cli.py  config.py  data.py  gradio_app.py  inference.py  model.py  service.py  tokenizer.py  training.py
tests/: test_smoke.py
